--- a/package.json
+++ b/package.json
@@ -14,9 +14,25 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "^8.2.0",
+    "@react-navigation/bottom-tabs": "^6.6.1",
+    "@react-navigation/core": "^6.4.17",
+    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/stack": "^6.4.1",
+    "lottie-react-native": "^6.7.2",
+    "mobx": "^6.13.1",
+    "mobx-react": "^9.1.1",
+    "mobx-state-tree": "^6.0.1",
     "react": "18.3.1",
     "react-native": "0.75.2",
-    "yarn": "^1.22.22"
+    "react-native-gesture-handler": "^2.18.1",
+    "react-native-mmkv": "^2.12.2",
+    "react-native-safe-area-context": "^4.10.9",
+    "react-native-svg": "^15.6.0",
+    "react-native-toast-message": "^2.2.0",
+    "react-native-vector-icons": "^10.1.0",
+    "yarn": "^1.22.22",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
