Added main app screen

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -117,3 +117,6 @@ dependencies {
         implementation jscFlavor
     }
 }
+
+// Apply feather fonts
+apply from: file("../../node_modules/react-native-vector-icons/fonts.gradle")
