--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "mobx-state-tree": "^6.0.1",
     "react": "18.3.1",
     "react-native": "0.75.2",
+    "react-native-animate-number": "^0.1.2",
     "react-native-gesture-handler": "^2.18.1",
     "react-native-mmkv": "^2.12.2",
     "react-native-safe-area-context": "^4.10.9",
