--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-native": "0.75.2",
     "react-native-animate-number": "^0.1.2",
     "react-native-gesture-handler": "^2.18.1",
+    "react-native-haptic-feedback": "^2.3.1",
     "react-native-mmkv": "^2.12.2",
     "react-native-safe-area-context": "^4.10.9",
     "react-native-svg": "^15.6.0",
