--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-native-haptic-feedback": "^2.3.1",
     "react-native-mmkv": "^2.12.2",
     "react-native-safe-area-context": "^4.10.9",
+    "react-native-sound": "^0.11.2",
     "react-native-svg": "^15.6.0",
     "react-native-toast-message": "^2.2.0",
     "react-native-vector-icons": "^10.1.0",
