--- a/example.env
+++ b/example.env
@@ -1,9 +1,5 @@
 ENV=DEV
-API_URL=https://www.whenisthenextmcufilm.com
-API_SUFFIX=/api
-API_VERSION=/v1
-API_TIMEOUT=5000
 
 # Details for sharing link
-APP_DOMAIN_NAME=domain.tld
-APP_PACKAGE=package.name
+APP_DOMAIN_NAME=vajankata.com
+APP_PACKAGE=com.vajankata
